--- a/Donor/view/controller/calendar/HSCalendarInfoViewController.xib
+++ b/Donor/view/controller/calendar/HSCalendarInfoViewController.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1536</int>
+		<int key="IBDocument.SystemTarget">1552</int>
 		<string key="IBDocument.SystemVersion">11G63</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2844</string>
+		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
 		<string key="IBDocument.AppKitVersion">1138.51</string>
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1930</string>
+			<string key="NS.object.0">2083</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
@@ -34,7 +34,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="97582957">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="842372106">
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="97582957"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="190372683"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -54,10 +53,9 @@
 					</object>
 					<object class="IBUIScrollView" id="190372683">
 						<reference key="NSNextResponder" ref="97582957"/>
-						<int key="NSvFlags">268</int>
+						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, 2}, {320, 379}}</string>
 						<reference key="NSSuperview" ref="97582957"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -65,8 +63,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 436}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="842372106"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -78,7 +74,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="840715272">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUILabel" id="893262104">
@@ -86,7 +82,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 7}, {320, 19}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="545930279"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -119,7 +114,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{50, 50}, {270, 18}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1061228767"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -150,7 +144,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{11, 50}, {20, 18}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="457142092"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -165,7 +158,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 69}, {320, 41}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="260253010"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -180,7 +172,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 69}, {320, 36}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="574693748"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -212,7 +203,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 79}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="760048146"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -227,7 +217,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{50, 119}, {270, 14}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="924959666"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -251,7 +240,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{6, 119}, {20, 18}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="461512316"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -266,7 +254,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 142}, {320, 3}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1046378649"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -281,7 +268,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{50, 155}, {270, 14}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="933141691"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -305,7 +291,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{6, 155}, {20, 18}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="448140014"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -320,7 +305,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 178}, {320, 3}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="948987987"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -332,7 +316,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{50, 191}, {270, 14}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="747177766"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -356,7 +339,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{6, 191}, {20, 18}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="928884368"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -371,7 +353,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 211}, {320, 41}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="343412506"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -383,7 +364,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 211}, {320, 36}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="113035291"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -408,7 +388,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 221}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="440994463"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -423,7 +402,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{50, 259}, {270, 14}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="60215589"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -447,7 +425,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{6, 259}, {20, 18}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="440885655"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -462,7 +439,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 284}, {320, 3}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="250807621"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -474,7 +450,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{50, 295}, {270, 14}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="250587272"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -498,7 +473,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{4, 295}, {20, 18}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="585620246"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -513,7 +487,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 320}, {320, 3}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="10478207"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -525,7 +498,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{50, 331}, {270, 14}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="104155632"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -549,7 +521,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{4, 331}, {20, 18}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="354250527"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -564,7 +535,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 356}, {320, 3}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="905775161"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -576,7 +546,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{50, 367}, {270, 14}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="944869904"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -600,7 +569,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{4, 367}, {20, 18}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="900179807"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -615,7 +583,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 392}, {320, 3}}</string>
 						<reference key="NSSuperview" ref="840715272"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -623,8 +590,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 426}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="893262104"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -882,7 +847,7 @@
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
-				<string key="-1.CustomClassName">CalendarInfoViewController</string>
+				<string key="-1.CustomClassName">HSCalendarInfoViewController</string>
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -926,43 +891,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">81</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CalendarInfoViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">backButtonClick:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">backButtonClick:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">backButtonClick:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="contentView">UIView</string>
-						<string key="scrollView">UIScrollView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="contentView">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="scrollView">
-							<string key="name">scrollView</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CalendarInfoViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
@@ -982,6 +911,6 @@
 			<string key="calendarScheduledTestIcon.png">{20, 18}</string>
 			<string key="dottedLine.png">{301, 3}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1930</string>
+		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
 </archive>
