--- a/wp7-donor/Donor/AchievesPage.xaml
+++ b/wp7-donor/Donor/AchievesPage.xaml
@@ -44,7 +44,11 @@
             <StackPanel>
                     <ListBox Margin="0,-5,-12,0" Name="AvailableBadges"
                              ScrollViewer.VerticalScrollBarVisibility="Disabled"
-                             tilteffect:TiltEffect.IsTiltEnabled="True" Loaded="ListBox_Loaded" Tap="AvailableBadges_Tap">
+                             tilteffect:TiltEffect.IsTiltEnabled="True" 
+                             Loaded="ListBox_Loaded" 
+                             ItemsSource="{Binding AvailableAchieves}"
+                             DataContext="{Binding Badges, Source={StaticResource Locator}}" 
+                             Tap="AvailableBadges_Tap">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Margin="0,20,0,5" Width="432" Orientation="Horizontal">
