--- a/Donor/view/controller/profile/HSProfileDescriptionViewController.xib
+++ b/Donor/view/controller/profile/HSProfileDescriptionViewController.xib
@@ -298,7 +298,6 @@
 										<string key="NSFrame">{{0, 41}, {301, 3}}</string>
 										<reference key="NSSuperview" ref="127708295"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -756,7 +755,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="227944980">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="582927547">
@@ -800,7 +799,6 @@
 						<int key="NSvFlags">290</int>
 						<string key="NSFrame">{{20, 74}, {290, 40}}</string>
 						<reference key="NSSuperview" ref="227944980"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -816,7 +814,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 134}</string>
-				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="582927547"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -872,14 +869,6 @@
 						<reference key="destination" ref="76067101"/>
 					</object>
 					<int key="connectionID">53</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">facebookUserNameTextField</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="300218284"/>
-					</object>
-					<int key="connectionID">77</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -939,19 +928,35 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">facebookContainerView</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="51451074"/>
-					</object>
-					<int key="connectionID">76</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">facebookLinkUnlinkContainerView</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="127708295"/>
 					</object>
 					<int key="connectionID">90</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">itsbetaContainerView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="51451074"/>
+					</object>
+					<int key="connectionID">212</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">itsbetaShowAchievementsButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="957511136"/>
+					</object>
+					<int key="connectionID">213</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">itsbetaStatusLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="300218284"/>
+					</object>
+					<int key="connectionID">214</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -1345,7 +1350,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">211</int>
+			<int key="maxID">214</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1395,10 +1400,11 @@
 						<string key="bloodDonationCountLabel">UILabel</string>
 						<string key="bloodGroupButton">UIButton</string>
 						<string key="cancelFacebookLinkProposeButton">UIButton</string>
-						<string key="facebookContainerView">UIView</string>
 						<string key="facebookLinkUnlinkContainerView">UIView</string>
-						<string key="facebookUserNameTextField">UILabel</string>
 						<string key="hiddenView">UIView</string>
+						<string key="itsbetaContainerView">UIView</string>
+						<string key="itsbetaShowAchievementsButton">UIButton</string>
+						<string key="itsbetaStatusLabel">UILabel</string>
 						<string key="linkUnlinkFacebookButton">UIButton</string>
 						<string key="linkUnlinkFacebookView">UIView</string>
 						<string key="nameTextField">UITextField</string>
@@ -1420,21 +1426,25 @@
 							<string key="name">cancelFacebookLinkProposeButton</string>
 							<string key="candidateClassName">UIButton</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="facebookContainerView">
-							<string key="name">facebookContainerView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
 						<object class="IBToOneOutletInfo" key="facebookLinkUnlinkContainerView">
 							<string key="name">facebookLinkUnlinkContainerView</string>
 							<string key="candidateClassName">UIView</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="facebookUserNameTextField">
-							<string key="name">facebookUserNameTextField</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
 						<object class="IBToOneOutletInfo" key="hiddenView">
 							<string key="name">hiddenView</string>
 							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="itsbetaContainerView">
+							<string key="name">itsbetaContainerView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="itsbetaShowAchievementsButton">
+							<string key="name">itsbetaShowAchievementsButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="itsbetaStatusLabel">
+							<string key="name">itsbetaStatusLabel</string>
+							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="linkUnlinkFacebookButton">
 							<string key="name">linkUnlinkFacebookButton</string>
